--- a/smart-back/.env
+++ b/smart-back/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://smartsystemall623:fTa4zCVgCnxi4gJM@smartsystemapi.4ylwyo9.mongodb.net/Smart-API?retryWrites=true&w=majority&appName=SmartsystemAPI
 Port=3000
+JWT_SECRET=jwt_secret_key
